...
                            subtasksState.toList()
                        )
                    },
                    enabled = title.isNotBlank(),
                    modifier = Modifier
                        .weight(1f)
                        .testTag("task-save-button")
                ) {
                    Text("Сохранить")
                }
            }
        }
    ) { paddingValues ->
...
        ) {
            OutlinedTextField(
                value = title,
                onValueChange = { value -> title = value },
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("task-title-input"),
                label = { Text("Название задачи*") },
                placeholder = { Text("Например: сходить в магазин") }
            )

            OutlinedTextField(
                value = description,
...
